# PQCnet

./: README.md
pqcnet-contracts/: Cargo.toml
pqcnet-contracts/autheo-pqc-core/: Cargo.toml  build.rs
pqcnet-contracts/autheo-pqc-core/examples/: secret_sharing_demo.rs
pqcnet-contracts/src/: adapters.rs  handshake.rs  lib.rs
wazero-harness/: go.mod  go.sum  main.go
